[package]
name = "rusty-chip8"
version = "0.2.0"
edition = "2021"
authors = ["Cem Eliguzel <cemeliguzel@email.com>"]
license = "MIT OR Apache-2.0"
description = "Chip8 emulator/interpreter"
readme = "README.md"
homepage = "https://github.com/rimbi/rusty-chip8"
repository = "https://github.com/rimbi/rusty-chip8"
keywords = ["game", "emulator", "chip8"]
categories = ["games", "emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.9.0", features = ["dynamic"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
structopt = "0.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
